--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3321,7 +3321,7 @@ input, select, textarea {
 	height: 700px;
 	border : 5px solid #36363680 ;
 }
-
+/* 
 .labelPoly{
 	color : white;
 	background :#203040;
@@ -3361,12 +3361,12 @@ input, select, textarea {
     list-style: none;
     padding-inline-start: 24px;
     margin-top: 0px;
-}
+} */
 
 
 /* test*/
 /* required styles */
-
+/* 
 .leaflet-pane,
 .leaflet-tile,
 .leaflet-marker-icon,
@@ -3393,15 +3393,15 @@ input, select, textarea {
 	  -webkit-user-drag: none;
 	}
 /* Prevents IE11 from highlighting tiles in blue */
-.leaflet-tile::selection {
+/* .leaflet-tile::selection {
 	background: transparent;
-}
+} */
 /* Safari renders non-retina tile on retina better with this, but Chrome is worse */
-.leaflet-safari .leaflet-tile {
+/* .leaflet-safari .leaflet-tile {
 	image-rendering: -webkit-optimize-contrast;
-	}
+	} */
 /* hack that prevents hw layers "stretching" when loading new tiles */
-.leaflet-safari .leaflet-tile-container {
+/* .leaflet-safari .leaflet-tile-container {
 	width: 1600px;
 	height: 1600px;
 	-webkit-transform-origin: 0 0;
@@ -3409,10 +3409,10 @@ input, select, textarea {
 .leaflet-marker-icon,
 .leaflet-marker-shadow {
 	display: block;
-	}
+	} */
 /* .leaflet-container svg: reset svg max-width decleration shipped in Joomla! (joomla.org) 3.x */
 /* .leaflet-container img: map is broken in FF if you have max-width: 100% on tiles */
-.leaflet-container .leaflet-overlay-pane svg,
+/* .leaflet-container .leaflet-overlay-pane svg,
 .leaflet-container .leaflet-marker-pane img,
 .leaflet-container .leaflet-shadow-pane img,
 .leaflet-container .leaflet-tile-pane img,
@@ -3427,9 +3427,9 @@ input, select, textarea {
 	touch-action: pan-x pan-y;
 	}
 .leaflet-container.leaflet-touch-drag {
-	-ms-touch-action: pinch-zoom;
+	-ms-touch-action: pinch-zoom; */
 	/* Fallback for FF which doesn't support pinch-zoom */
-	touch-action: none;
+	/* touch-action: none;
 	touch-action: pinch-zoom;
 }
 .leaflet-container.leaflet-touch-drag.leaflet-touch-zoom {
@@ -3455,9 +3455,9 @@ input, select, textarea {
 	-moz-box-sizing: border-box;
 	     box-sizing: border-box;
 	z-index: 800;
-	}
+	} */
 /* workaround for https://bugzilla.mozilla.org/show_bug.cgi?id=888319 */
-.leaflet-overlay-pane svg {
+/* .leaflet-overlay-pane svg {
 	-moz-user-select: none;
 	}
 
@@ -3481,15 +3481,15 @@ input, select, textarea {
 	behavior: url(#default#VML);
 	display: inline-block;
 	position: absolute;
-	}
+	} */
 
 
 /* control positioning */
-
+/* 
 .leaflet-control {
 	position: relative;
 	z-index: 800;
-	pointer-events: visiblePainted; /* IE 9-10 doesn't have auto */
+	pointer-events: visiblePainted; IE 9-10 doesn't have auto
 	pointer-events: auto;
 	}
 .leaflet-top,
@@ -3528,11 +3528,11 @@ input, select, textarea {
 	}
 .leaflet-right .leaflet-control {
 	margin-right: 10px;
-	}
+	} */
 
 
 /* zoom and fade animations */
-
+/* 
 .leaflet-fade-anim .leaflet-tile {
 	will-change: opacity;
 	}
@@ -3567,11 +3567,11 @@ input, select, textarea {
 
 .leaflet-zoom-anim .leaflet-zoom-hide {
 	visibility: hidden;
-	}
+	} */
 
 
 /* cursors */
-
+/* 
 .leaflet-interactive {
 	cursor: pointer;
 	}
@@ -3595,10 +3595,10 @@ input, select, textarea {
 	cursor: -webkit-grabbing;
 	cursor:    -moz-grabbing;
 	cursor:         grabbing;
-	}
+	} */
 
 /* marker & overlays interactivity */
-.leaflet-marker-icon,
+/* .leaflet-marker-icon,
 .leaflet-marker-shadow,
 .leaflet-image-layer,
 .leaflet-pane > svg path,
@@ -3610,12 +3610,12 @@ input, select, textarea {
 .leaflet-image-layer.leaflet-interactive,
 .leaflet-pane > svg path.leaflet-interactive,
 svg.leaflet-image-layer.leaflet-interactive path {
-	pointer-events: visiblePainted; /* IE 9-10 doesn't have auto */
+	pointer-events: visiblePainted; 
 	pointer-events: auto;
-	}
+	} */
 
 /* visual tweaks */
-
+/* 
 .leaflet-container {
 	background: #ddd;
 	outline: 0;
@@ -3629,18 +3629,18 @@ svg.leaflet-image-layer.leaflet-interactive path {
 .leaflet-zoom-box {
 	border: 2px dotted #38f;
 	background: rgba(255,255,255,0.5);
-	}
+	} */
 
 
 /* general typography */
-.leaflet-container {
+/* .leaflet-container {
 	font: 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
 	}
-
+  */
 
 /* general toolbar styles */
 
-.leaflet-bar {
+/* .leaflet-bar {
 	box-shadow: 0 1px 5px rgba(0,0,0,0.65);
 	border-radius: 4px;
 	}
@@ -3692,10 +3692,10 @@ svg.leaflet-image-layer.leaflet-interactive path {
 .leaflet-touch .leaflet-bar a:last-child {
 	border-bottom-left-radius: 2px;
 	border-bottom-right-radius: 2px;
-	}
+	} */
 
 /* zoom control */
-
+/* 
 .leaflet-control-zoom-in,
 .leaflet-control-zoom-out {
 	font: bold 18px 'Lucida Console', Monaco, monospace;
@@ -3704,12 +3704,12 @@ svg.leaflet-image-layer.leaflet-interactive path {
 
 .leaflet-touch .leaflet-control-zoom-in, .leaflet-touch .leaflet-control-zoom-out  {
 	font-size: 22px;
-	}
+	} */
 
 
 /* layers control */
 
-.leaflet-control-layers {
+/* .leaflet-control-layers {
 	box-shadow: 0 1px 5px rgba(0,0,0,0.4);
 	background: #fff;
 	border-radius: 5px;
@@ -3757,16 +3757,16 @@ svg.leaflet-image-layer.leaflet-interactive path {
 	height: 0;
 	border-top: 1px solid #ddd;
 	margin: 5px -10px 5px -6px;
-	}
+	} */
 
 /* Default icon URLs */
-.leaflet-default-icon-path {
+/* .leaflet-default-icon-path {
 	background-image: url(images/marker-icon.png);
-	}
+	} */
 
 
 /* attribution and scale controls */
-
+/* 
 .leaflet-container .leaflet-control-attribution {
 	background: #fff;
 	background: rgba(255, 255, 255, 0.7);
@@ -3825,12 +3825,12 @@ svg.leaflet-image-layer.leaflet-interactive path {
 .leaflet-touch .leaflet-bar {
 	border: 2px solid rgba(0,0,0,0.2);
 	background-clip: padding-box;
-	}
+	} */
 
 
 /* popup */
 
-.leaflet-popup {
+/* .leaflet-popup {
 	position: absolute;
 	text-align: center;
 	margin-bottom: 20px;
@@ -3917,20 +3917,20 @@ svg.leaflet-image-layer.leaflet-interactive path {
 .leaflet-oldie .leaflet-popup-content-wrapper,
 .leaflet-oldie .leaflet-popup-tip {
 	border: 1px solid #999;
-	}
+	} */
 
 
 /* div icon */
-
+/* 
 .leaflet-div-icon {
 	background: #fff;
 	border: 1px solid #666;
-	}
+	} */
 
 
 /* Tooltip */
 /* Base styles for the element that has a tooltip */
-.leaflet-tooltip {
+/* .leaflet-tooltip {
 	position: absolute;
 	padding: 6px;
 	background-color: #fff;
@@ -3958,50 +3958,6 @@ svg.leaflet-image-layer.leaflet-interactive path {
 	border: 6px solid transparent;
 	background: transparent;
 	content: "";
-	}
+	} */
 
-/* Directions */
 
-.leaflet-tooltip-bottom {
-	margin-top: 6px;
-}
-.leaflet-tooltip-top {
-	margin-top: -6px;
-}
-.leaflet-tooltip-bottom:before,
-.leaflet-tooltip-top:before {
-	left: 50%;
-	margin-left: -6px;
-	}
-.leaflet-tooltip-top:before {
-	bottom: 0;
-	margin-bottom: -12px;
-	border-top-color: #fff;
-	}
-.leaflet-tooltip-bottom:before {
-	top: 0;
-	margin-top: -12px;
-	margin-left: -6px;
-	border-bottom-color: #fff;
-	}
-.leaflet-tooltip-left {
-	margin-left: -6px;
-}
-.leaflet-tooltip-right {
-	margin-left: 6px;
-}
-.leaflet-tooltip-left:before,
-.leaflet-tooltip-right:before {
-	top: 50%;
-	margin-top: -6px;
-	}
-.leaflet-tooltip-left:before {
-	right: 0;
-	margin-right: -12px;
-	border-left-color: #fff;
-	}
-.leaflet-tooltip-right:before {
-	left: 0;
-	margin-left: -12px;
-	border-right-color: #fff;
-	}
