--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -1,10 +1,64 @@
+#header {
+
+  justify-content: space-between;
+  background: #4acaa8;
+  color: #d2dde9;
+  /* height: 100%; */
+  overflow-y: auto;
+  position: fixed;
+  text-align: center;
+  top: 0;
+  width: 25%;
+  right: 0;
+  height: 729px;
+}
+
+#wrapper {
+  background: #fff;
+  -moz-backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+	backface-visibility: hidden;
+	-moz-transition: -moz-transform 0.5s ease;
+	-webkit-transition: -webkit-transform 0.5s ease;
+	-ms-transition: -ms-transform 0.5s ease;
+	transition: transform 0.5s ease;
+	/* padding: 0px 0 1px 0; */
+  padding-right: 25%;
+
+}
 
 
+/* 
+*, ::before, ::after {
+  box-sizing: inherit;
+} */
+
+#header {
+  color: #d2f2e9;
+  text-align: center;
+
+}
+
+body, input, select, textarea {
+  color: #888;
+  font-family: "Lato", sans-serif;
+  font-size: 16pt;
+  font-weight: 400;
+  line-height: 1.75em;
+  margin:0;
+  padding: 0;
+ 
+}
+
+
+
+/* PARTI RESERVE POUR LEAFLET */
 #map {
 	text-align : justify ;
-	width: 80%;
-	padding-left : 5%;
-	height: 700px;
+	width: 100%;
+	padding-left : 5px;
+	height: 720px;
 	border : 5px solid #36363680 ;
 }
 
