--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -14,7 +14,7 @@
 }
 
 #wrapper {
-  background: #fff;
+  background: rgb(41, 29, 29);
   -moz-backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
   -ms-backface-visibility: hidden;
@@ -24,7 +24,7 @@
 	-ms-transition: -ms-transform 0.5s ease;
 	transition: transform 0.5s ease;
 	/* padding: 0px 0 1px 0; */
-  padding-right: 25%;
+  /* padding-right: 25%; */
 
 }
 
@@ -35,7 +35,7 @@
 } */
 
 #header {
-  color: #d2f2e9;
+  color: #00fab3;
   text-align: center;
 
 }
@@ -63,7 +63,7 @@ body, input, select, textarea {
 }
 
 .labelPoly{
-	color : white;
+	color : rgb(43, 43, 43);
 	background :#203040;
 	border: none;
 }
@@ -73,7 +73,7 @@ body, input, select, textarea {
 }
 
 #instructions {
-  background-color: #eee;
+  background-color: rgb(54, 54, 54);
   border-radius: 2px;
   position: absolute;
   top: 10px;
@@ -88,7 +88,7 @@ body, input, select, textarea {
 }
 .sublegend-color {
     width: 20px;
-    border: 1px solid #666666;
+    border: 1px solid #000000;
     display: inline-block;
     opacity: 0.5;
 }
@@ -114,4 +114,22 @@ body, input, select, textarea {
   line-height: 40px;
   margin-top: -20px;
   margin-left: -20px;
+}
+
+
+
+.legend {
+  line-height: 18px;
+  color: #555;
+  background-color: rgba(255, 255, 255, 0.253);
+  margin: 10px;
+  
+}
+  
+.legend i {
+   width: 18px;
+   height: 18px;
+   float: left;
+   margin-right: 8px;
+   opacity: 0.7;
 }
