--- a/leaflet/feature-legend.css
+++ b/leaflet/feature-legend.css
@@ -1,5 +1,5 @@
 .leaflet-control-feature-legend {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.445);
 }
 
 .leaflet-control-feature-legend-title {
@@ -19,7 +19,7 @@
 
 .leaflet-control-feature-legend i {
   display: inline-block;
-  padding: 0px 3px 0px 4px;
+  padding: 2px 0px 1px 20px;
   position: relative;
 }
 
@@ -31,15 +31,13 @@
 }
 
 .leaflet-control-feature-legend-contents {
-  /* display: none; */
-display: block;
-padding: 6px 10px 6px 6px;
+display: none; 
 overflow-y: auto;
-position: fixed;
 text-align: left;
-color :papayawhip;
+color :rgb(54, 54, 54);
 right: 1.5em;
 bottom: 5%;
+
 }
 
 .leaflet-control-feature-legend-expanded .leaflet-control-feature-legend-contents {
